# una-sus

./: .dockerignore  .flake8  .gitignore  .~lock.unasus_ofertas_detalhadas.csv#  ANALISE_COMPARATIVA_SCRAPERS.md  ANALISE_ESTRUTURA_ATUAL.md  CHECKPOINT_CRUCIAL.md  Dockerfile  ESTADO_ORIGINAL_LIMPO.md  ESTRUTURA_PRINCIPAL.md  LICENSE  LIMPEZA_REALIZADA.md  MANIFEST.in  MANUAL_COMPLETO.md  README.md  README_MELHORIAS_DEIA.md  README_backup.md  RELATORIO_VERIFICACAO.md  TIMESTAMP_TRABALHO.md  analise_dados_20250729_183943.json  checkpoint.json  coletor_database_geral.py  docker-compose.yml  encontrar_oferta_api.py  encontrar_oferta_multiplos.py  encontrar_oferta_real.py  import requests.py  investigacao_paginacao.json  investigar_paginacao.py  monitor_scraper.py  pyproject.toml  requirements.txt  run_database.py  run_scraper_basic.py  run_scraper_enhanced.py  scraper_unasus.py  scraper_unasus_incremental.py  scraper_unasus_melhorado.py  setup.py  start.py  (+18 more)
.github/: CONTRIBUTING.md  README.md
.github/workflows/: main.yml  python-app.yml
Grounded Theory/: .gitignore  ARQUITETURA_ANALISE_MODULAR.md  CHECKPOINT_BANCO_DADOS.md  COMPARACAO_COLETA.md  CORRECAO_OPENPYXL.md  GUIA_RAPIDO.md  GUIA_WORKFLOW_INTERATIVO.md  GUIA_WORKFLOW_LOGICO.md  LIMPEZA_TESTE_MANUAL.md  MELHORIAS_LOGGING.md  MODELO_TEORIA_FUNDAMENTADA.md  PLANO_LIMPEZA.md  README.md  README_Grounded_Theory.md  RELATORIO_TESTES.md  RELATORIO_TESTES_FINAIS.md  RESUMO_FINAL_IMPLEMENTACAO.md  RESUMO_FORMATOS_SAIDA.md  RESUMO_LIMPEZA_FINAL.md  RESUMO_MELHORIAS_FINAIS.md  RESUMO_ORGANIZACAO.md  SISTEMA_BANCO_DADOS.md  analise_exploratoria_dados.py  coleta_e_processamento_separados.py  executar_workflow_interativo.py  exemplo_banco_dados.py  exemplo_formatos_saida.py  exemplo_logging_melhorado.py  formatos_saida.py  grounded_theory_metodologica.py  grounded_theory_runner.py  iniciar_pesquisa.py  orquestrador_grounded_theory.py  scraper_unasus_backup_original.py  scraper_unasus_grounded.py  teste_codificacao_simples.py  teste_coleta_completa.py  workflow_interativo.py
Grounded Theory/checkpoints/: coleta_unasus_checkpoint_20250727_201209.json  coleta_unasus_checkpoint_20250727_201220.json  coleta_unasus_checkpoint_20250727_201232.json  coleta_unasus_checkpoint_20250727_201244.json  coleta_unasus_checkpoint_20250727_201256.json  coleta_unasus_checkpoint_20250727_201307.json  coleta_unasus_checkpoint_20250727_201319.json  coleta_unasus_checkpoint_20250727_201331.json  coleta_unasus_checkpoint_20250727_201342.json  coleta_unasus_checkpoint_20250727_201354.json  coleta_unasus_checkpoint_20250727_202023.json  coleta_unasus_checkpoint_20250727_202452.json  coleta_unasus_checkpoint_20250727_202504.json  coleta_unasus_checkpoint_20250728_090246.json  coleta_unasus_checkpoint_20250728_090259.json  coleta_unasus_checkpoint_20250728_091545.json  coleta_unasus_checkpoint_20250728_091558.json  coleta_unasus_checkpoint_20250728_091915.json  coleta_unasus_checkpoint_20250728_091928.json
Grounded Theory/dados/: unasus_dados_completos_20250727_202513.csv  unasus_dados_completos_20250727_202513.json  unasus_dados_completos_20250728_090308.csv  unasus_dados_completos_20250728_090308.json  unasus_dados_completos_20250728_091607.csv  unasus_dados_completos_20250728_091607.json  unasus_dados_completos_20250728_091938.csv  unasus_dados_completos_20250728_091938.json
Grounded Theory/modulos/: __init__.py  analisador_geral.py  banco_dados.py  codificacao_aberta.py  codificacao_axial.py  codificacao_seletiva.py  coleta_dados.py  coletor_unasus_completo.py  logger_config.py  processador_deia.py
Grounded Theory/relatorios/: relatorio_coleta_completa_20250728_091938.json
analise/: __init__.py  analisador_geral.py  cobertura_programatica.py  distribuicao_geografica.py  estatisticas_basicas.py  mapeamento_programas.py  relatorios.py  relatorios_visuais.py
archive/: PLANO_DATABASE_GERAL.md  README_ARQUIVO.md  coletor_database_geral.py
archive/examples_deia/: reanalisar_deia_existente.py  testar_busca_deia.py
arquivo/: analisar_dados_coletados.py  analisar_dados_existentes.py
checkpoints/: coleta_database_geral_checkpoint_20250729_202508.json  coleta_database_geral_checkpoint_20250729_202521.json  coleta_database_geral_checkpoint_20250729_203928.json  coleta_database_geral_checkpoint_20250729_205109.json  coleta_database_geral_checkpoint_20250729_215805.json  coleta_database_geral_checkpoint_20250729_221010.json
data/: .gitkeep  relatorio_coleta_database_geral_20250729_202530.json  relatorio_coleta_database_geral_20250729_205846.json  relatorio_coleta_database_geral_20250729_222308.json  unasus_database_geral_20250729_202530.csv  unasus_database_geral_20250729_202530.json  unasus_database_geral_20250729_205846.csv  unasus_database_geral_20250729_205846.json  unasus_database_geral_20250729_222308.csv  unasus_ofertas_detalhadas.csv
data/processed/: database_geral.db
docs/: ESTADO_ATUAL_SISTEMA.md  GLOSSARIO_TECNICO.md  MANUAL_COMPLETO.md  README.md
examples/: .gitkeep  exemplo_uso_basico.py
relatorios/: cobertura_programatica.txt  cobertura_programatica_completo.txt  cobertura_programatica_executivo.txt  distribuicao_geografica.txt  mapeamento_programas.txt  relatorio_analise_20250729_230246.json  relatorio_analise_20250729_230246.txt  relatorio_analise_20250729_231054.json  relatorio_analise_20250729_231054.txt  relatorio_completo_visual.txt
src/: __init__.py
src/core/: __init__.py  database.py
src/scrapers/: __init__.py
src/utils/: __init__.py
tests/: __init__.py
