[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "una-sus-scraper"
version = "1.0.0"
description = "Web scraper para coletar dados de cursos e ofertas da UNA-SUS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eunilo", email = ""}
]
maintainers = [
    {name = "Eunilo", email = ""}
]
keywords = ["scraper", "web-scraping", "unasus", "health", "education", "deia", "diversity", "equity", "inclusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/eunilo/una-sus"
Documentation = "https://github.com/eunilo/una-sus#readme"
Repository = "https://github.com/eunilo/una-sus"
"Bug Tracker" = "https://github.com/eunilo/una-sus/issues"

[project.scripts]
una-sus-scraper = "scraper_unasus:main"

[tool.setuptools]
packages = ["unsa_sus_scraper"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
] 